# workflow-commander

./: CLAUDE.md  README.md  S3_SYNC_IMPLEMENTATION_PLAN.md  codebase-complexity-analysis-report.md  project_config.md  pyproject.toml  workflow_plan.md
.github/: copilot-instructions.md
docs/: configuration-refactoring-summary.md  configuration-service-architecture.md
src/dev_workflow_mcp/: config.py  server.py
src/dev_workflow_mcp/models/: __init__.py  workflow_state.py
src/dev_workflow_mcp/prompts/: management_prompts.py  phase_prompts.py
src/dev_workflow_mcp/services/: __init__.py  config_service.py  dependency_injection.py  migration_strategy.md  session_lifecycle_manager.py  session_repository.py  session_service_factory.py  session_sync_service.py
src/dev_workflow_mcp/utils/: cache_manager.py  config_helpers.py  config_utils.py  session_manager.py
tests/: test_server.py
tests/test_integration/: test_cache_mode_integration.py
tests/test_prompts/: test_management_prompts.py  test_phase_prompts.py
tests/test_services/: test_config_service.py  test_dependency_injection.py  test_server_integration.py
tests/test_utils/: test_s3_client.py  test_session_manager.py  test_session_manager_extended.py  test_session_uniqueness.py  test_state_manager.py
