[project]
name = "dev-workflow-mcp"
version = "0.1.0"
description = "Development workflow MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "pydantic",
    "boto3",
]

[project.scripts]
dev-workflow-mcp = "dev_workflow_mcp.server:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "DTZ"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dev_workflow_mcp"]

[tool.hatch.build]
include = ["src/dev_workflow_mcp/**/*.py"]
exclude = ["src/dev_workflow_mcp/**/*_test.py"]
